crates/cosmon-cli/tests/snapshots/help__config.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Config — inspect `.cosmon/config.toml` (`show adapters`, `adapters`)

Usage: cs config [OPTIONS] <COMMAND>

Commands:
  show      Show resolved configuration for a topic (currently: `adapters`)
  adapters  List every adapter name the dispatch registry would accept (union of compile-time built-ins and `[adapters.<name>]` rows from `.cosmon/config.toml`)

Options:
      --config <PATH>  Path to the state directory (default: the galaxy's .cosmon/state/)
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
