crates/cosmon-cli/tests/snapshots/help__config_show.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Show resolved configuration for a topic (currently: `adapters`)

Usage: cs config show [OPTIONS] <COMMAND>

Commands:
  adapters  Print the effective `[adapters.*]` resolution for Direct-API adapters (`openai`, `anthropic`)

Options:
      --config <PATH>  Path to the state directory (default: the galaxy's .cosmon/state/)
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
