crates/cosmon-cli/tests/snapshots/help__config_show_adapters.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Print the effective `[adapters.*]` resolution for Direct-API adapters (`openai`, `anthropic`)

Usage: cs config show adapters [OPTIONS]

Options:
      --config <PATH>  Path to the state directory (default: the galaxy's .cosmon/state/)
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
