crates/cosmon-cli/tests/snapshots/help__daemons_logs.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Tail the supervisor log (the aggregate one, not per-daemon stdout)

Usage: cs daemons logs [OPTIONS]

Options:
      --config <PATH>    Path to the daemons config file. Defaults to `~/.config/cosmon/daemons.toml`. Used to resolve the log file
      --log-file <PATH>  Path to the supervisor log file. Overrides the `log_file` declared in the config
  -v, --verbose          Enable verbose output
      --json             Output in JSON format
      --lines <N>        Number of trailing lines to print. Defaults to 50 [default: 50]
  -h, --help             Print help
